# tinyfsm

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: lib.rs
tests/: integration.rs
