[package]
name = "rustfsm"
version = "0.1.0"
edition = "2021"
authors = ["H Bacelar <dev@bacelar.fr>"]
description = "A full static Rust finite state machine library"
license = "MIT"
repository = "https://github.com/hbacelar8/rustfsm"
documentation = "https://docs.rs/rustfsm"
readme = "README.md"
keywords = ["rustfsm", "state", "machine", "fsm"]
exclude = ["target/", ".git/", ".github/", "*.lock"]

[dependencies]
